# NDK_OpenGLES_3_0

./: .gitignore
.github/workflows/: android.yml
app/: build.gradle
app/src/glfw/: CMakeLists.txt  build_env.sh  main.cpp  main.h  triangle.cpp
app/src/main/assets/other/: 1.csv
app/src/main/assets/shader_source/: material_lighting.fs  material_lighting.vs
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Components/: Camera.cpp  Camera.h  Canvas.h  Light.cpp  Light.h  MeshRender.cpp  MeshRender.h  MeshRenderer.cpp  MeshRenderer.h  ObjLoader.cpp  ObjLoader.h  ObjMeshRenderer.cpp  ObjMeshRenderer.h  PBOCanvas.cpp  PBOCanvas.h  Transform.cpp  Transform.h
app/src/main/cpp/Components/GLESHelpers/: OwnedResources.cpp  OwnedResources.h
app/src/main/cpp/Components/Renderer/: IRenderer.h  LightedMeshRenderer.cpp  LightedMeshRenderer.h  LineRenderer.cpp  LineRenderer.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  ObjMeshRenderer.cpp  ObjMeshRenderer.h  PointRenderer.cpp  PointRenderer.h  RenderProgram.h  ShaderString.h  TexturedMeshRenderer.cpp  TexturedMeshRenderer.h  UIRectRenderer.cpp  UIRectRenderer.h  WireFrameRenderer.cpp  WireFrameRenderer.h
app/src/main/cpp/Entity/: GameObject.cpp  GameObject.h
app/src/main/cpp/System/: Scene.cpp  Scene.h
app/src/main/cpp/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  WindowSurface.cpp  WindowSurface.h
app/src/main/cpp/model/: mesh.h  model.h  shader.h
app/src/main/cpp/render/: MyGLRenderContext.cpp
app/src/main/cpp/sample/: AvatarSample.cpp  AvatarSample.h  BasicLightingSample.cpp  BasicLightingSample.h  BeatingHeartSample.cpp  BeatingHeartSample.h  BezierCurveSample.cpp  BezierCurveSample.h  BigEyesSample.cpp  BigEyesSample.h  BigHeadSample.cpp  BigHeadSample.h  BlendingSample.cpp  BlendingSample.h  CloudSample.cpp  CloudSample.h  ConveyorBeltExample.cpp  ConveyorBeltExample.h  CoordSystemSample.cpp  CoordSystemSample.h  DepthTestingSample.cpp  DepthTestingSample.h  FBOBlitSample.cpp  FBOBlitSample.h  FBOLegLengthenSample.cpp  FBOLegLengthenSample.h  FaceSlenderSample.cpp  FaceSlenderSample.h  GLTransitionExample.cpp  GLTransitionExample.h  GLTransitionExample_2.cpp  GLTransitionExample_2.h  GLTransitionExample_3.cpp  GLTransitionExample_3.h  GLTransitionExample_4.cpp  GLTransitionExample_4.h  Instancing3DSample.cpp  Instancing3DSample.h  InstancingSample.cpp  InstancingSample.h  (+35 more)
app/src/main/cpp/util/: GLUtils.h  LogUtil.h
app/src/main/java/com/byteflow/app/: CommonUtils.java  MainActivity.java  MyGLSurfaceView.java
gradle/wrapper/: gradle-wrapper.properties
